# ncteqpy

./: .gitattributes  .gitignore  README.md  pyproject.toml
doc/examples/: data_vs_theory.ipynb  datasets.ipynb
ncteqpy/: __init__.py  _typing.py  chi2.py  correlations.py  cuts.py  data.py  dataIDs.yaml  data_groupby.py  hessian.py  jaml.py  kinematic_variables.py  labels.py  plot.py  run.py  scans.py  settings.py  util.py
ncteqpy/plot/: chi2_histograms.py  data_vs_theory.py  datasets_histograms.py  datasets_years.py  grid.py  hessian.py  kinematic_coverage.py  scan.py  util.py
ncteqpy/tables/: data_chi2.py  parameter_chi2.py
